- updated contact info

--- a/trunk/src/datavisualizer.ui
+++ b/trunk/src/datavisualizer.ui
@@ -20,7 +20,7 @@
  along with qSLDcalc. If not, see <http://www.gnu.org/licenses/>.
 
  Author(s) of this file:
-  Ingo Bressler (ingo at cs.tu-berlin.de)
+  Ingo Bressler (qsldcalc at ingobressler.net)
 -->
 <ui version="4.0" >
  <class>DataVisualizer</class>
